# cardagon-server

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  renovate.json5
.github/workflows/: build-workflow.yml
alembic/: env.py
alembic/versions/: 20251102220846_d95298fa219c_.py  20251102231707_7e820fd0b766_.py  20251102232058_053edfb7648e_.py  20251102232847_a16393459154_.py  20251103020723_c27ee62288b4_.py  20251103023715_549f6d627a9c_.py  20251116041656_df7aec486705_.py  20251116113036_47f81029eea1_.py  274253395b22_.py
app/: main.py  models.py  settings.py
app/dependencies/: db.py  security.py  user.py
app/dto/: __init__.py  game.py  game_logic.py  game_requests.py  game_responses.py  user.py
app/game_logic/: board.py  game.py  game_classes.py  game_settings.py  hex.py  main.py
app/models/: user.py
app/routers/: auth.py  docs.py  game.py  game_logic.py  login.py  status.py  user.py  users.py
app/service/: security_service.py  user_service.py
